fixed nav collapse on mobile

--- a/app/assets/stylesheets/templates.scss
+++ b/app/assets/stylesheets/templates.scss
@@ -17,6 +17,11 @@ footer.page-footer {
   .navbar:not(.top-nav-collapse) {
     background: #8899BF !important;
   }
+
+  .navbar-collapse.collapse.in {
+    display: block!important;
+  }
+
 }
 
 h1 {
